# rest-api-flash-python

./: Procfile  backup.py.bak  config.py  main.py  pyproject.toml  requirements.txt  routes.py  test.md  utils.py  vercel.json
apk/: API Xnuvers007-1.apk  API Xnuvers007-1.apk.bak
static/js/: main.js
templates/: index.jinja2
templates/components/: api_services.jinja2  changelogs.jinja2  footer.jinja2  galleries.jinja2  header.jinja2
templates/layout/: app.jinja2
templates/partials/: meta.jinja2  scripts.jinja2
