[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
fake-useragent = "^1.1.3"
Flask-Caching = "^2.0.2"
Flask-Cors = "^3.0.10"
Markdown = "^3.4.3"
bs4 = "^0.0.1"
APScheduler = "^3.10.1"
youtube-search-python = "^1.6.6"
email-validator = "^2.1.0"
Routes = "^2.5.1"
utils = "^1.0.1"
bleach = "^6.1.0"
MarkupSafe = "^2.1.3"
urllib3 = "^2.1.0"
requests = "^2.31.0"
config = "^0.5.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"